--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
     <title>Test work</title>
 </head>
 <body>
-    < class="wrapper">
+    <div class="wrapper">
         <div class="container">
             <header class="header">
                 <div class="header_logo">
@@ -17,7 +17,7 @@
                     </a>
                 </div>
                 <div class="header_cart text">
-                    <a href="#">Корзина</a>
+                    <a href="/cart.html"><span>Корзина</span></a>
                 </div>
             </header>
         </div>
@@ -41,7 +41,9 @@
                     <div class="form_item">
                         <input placeholder="Email" id="formMail" data-reg="" type="text" name="mail" required class="form_input">
                     </div>
-                    <button class="form_button disable" type="submit">оформить заказ</button>
+                    <div class="form_item">
+                        <button class="form_button disable" type="submit">оформить заказ</button>
+                    </div>
                 </form>
             </section>
         </main>
