--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=04">
     <title>Test work</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
                     </a>
                 </div>
                 <div class="header_cart text">
-                    <a href="/cart.html">Корзина</a>
+                    <a href="/cart.html"><span>Корзина</span></a>
                 </div>
             </header>
         </div>
