--- a/cart.html
+++ b/cart.html
@@ -23,8 +23,63 @@
         </div>
         <main class="main">
             <section class="cart">
+                <div class="container">
                 <div class="cart_title">
                     <h1>Корзина</h1>
+                </div>
+                    <div class="cart_items" id="purchase-container">
+                        <div class="cart_item" data-id="1">
+                            <div class="cart_image">
+                                <img src="/src/catalog_items/item1.png" alt="item">
+                            </div>
+                            <div class="cart_name text">
+                                Увлажнитель воздуха STARWIND SHC1322, 3л, белый
+                            </div>
+                            <div class="cart_counter counter_wrapper">
+                                <div class="counter_minus" data-action="minus"><img src="/src/icon/minus.svg" alt="-"></div>
+                                <div class="counter_current" data-counter>1</div>
+                                <div class="counter_plus" data-action="plus"><img src="/src/icon/plus.svg" alt="+"></div>
+                            </div>
+                            <div class="cart_price cost">1650 ₽</div>
+                            <div class="cart_remove-icon"><img src="/src/icon/close.svg" alt="close"></div>
+                            <div class="cart_remove-btn"><img src="/src/icon/remove.png" alt="close"></div>
+                        </div>
+                        <div class="cart_item" data-id="1">
+                            <div class="cart_image">
+                                <img src="/src/catalog_items/item1.png" alt="item">
+                            </div>
+                            <div class="cart_name text">
+                                Увлажнитель воздуха STARWIND SHC1322, 3л, белый
+                            </div>
+                            <div class="cart_counter counter_wrapper">
+                                <div class="counter_minus" data-action="minus"><img src="/src/icon/minus.svg" alt="-"></div>
+                                <div class="counter_current" data-counter>1</div>
+                                <div class="counter_plus" data-action="plus"><img src="/src/icon/plus.svg" alt="+"></div>
+                            </div>
+                            <div class="cart_price cost">1650 ₽</div>
+                            <div class="cart_remove-icon"><img src="/src/icon/close.svg" alt="close"></div>
+                            <div class="cart_remove-btn"><img src="/src/icon/remove.png" alt="close"></div>
+                        </div>
+                        <div class="cart_item" data-id="1">
+                            <div class="cart_image">
+                                <img src="/src/catalog_items/item1.png" alt="item">
+                            </div>
+                            <div class="cart_name text">
+                                Увлажнитель воздуха STARWIND SHC1322, 3л, белый
+                            </div>
+                            <div class="cart_counter counter_wrapper">
+                                <div class="counter_minus" data-action="minus"><img src="/src/icon/minus.svg" alt="-"></div>
+                                <div class="counter_current" data-counter>1</div>
+                                <div class="counter_plus" data-action="plus"><img src="/src/icon/plus.svg" alt="+"></div>
+                            </div>
+                            <div class="cart_price cost">1650 ₽</div>
+                            <div class="cart_remove-icon"><img src="/src/icon/close.svg" alt="close"></div>
+                            <div class="cart_remove-btn"><img src="/src/icon/remove.png" alt="close"></div>
+                        </div>
+                    </div>
+                    <div class="cart_summ">
+                        <h1>Сумма 6330 ₽</h1>
+                    </div>
                 </div>
             </section>
             <section class="form">
