--- a/index.html
+++ b/index.html
@@ -28,231 +28,8 @@
                     <div class="catalog_title">
                         <h1>Каталог товаров</h1>
                     </div>
-                    <div class="catalog_items">
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item1.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Увлажнитель воздуха STARWIND SHC1322, 3л, белый
-                            </div>
-                            <div class="Item_cost cost">
-                                1650 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item2.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Триммер PHILIPS HC3521/15 серебристый/черный
-                            </div>
-                            <div class="Item_cost cost">
-                                2290 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item3.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Фитнес-трекер HONOR Band 5 CRS-B19S, 0.95", розовый
-                            </div>
-                            <div class="Item_cost cost">
-                                2390 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item4.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Мышь A4TECH Bloody V3, игровая, оптическая, проводная, USB, черный
-                            </div>
-                            <div class="Item_cost cost">
-                                960 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item5.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Фитнес-трекер HONOR Band 5 CRS-B19S, 0.95", черный
-                            </div>
-                            <div class="Item_cost cost">
-                                2390 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item6.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Пылесос SINBO SVC 3497, 2500Вт, синий/серый
-                            </div>
-                            <div class="Item_cost cost">
-                                5670 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item7.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Планшет DIGMA Optima 7 Z800 Android 10.0 серебристый
-                            </div>
-                            <div class="Item_cost cost">
-                                9490 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item8.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Монитор игровой ACER Nitro RG241YPbiipx 23.8" черный
-                            </div>
-                            <div class="Item_cost cost">
-                                16 800 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item9.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Экшн-камера DIGMA DiCam 310 4K, WiFi, черный
-                            </div>
-                            <div class="Item_cost cost">
-                                2290 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item10.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Умная колонка ЯНДЕКС c голосовым помощником Алисой, серебристый
-                            </div>
-                            <div class="Item_cost cost">
-                                5670 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item11.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Квадрокоптер DJI Mini 2 MT2PD Fly More Combo с камерой, серый
-                            </div>
-                            <div class="Item_cost cost">
-                                60 990 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item12.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Шлем виртуальной реальности HTC Vive PRO Eye EEA, черный/синий
-                            </div>
-                            <div class="Item_cost cost">
-                                11 960 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item13.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                МФУ лазерный CANON i-Sensys MF445dw, A4, лазерный, черный
-                            </div>
-                            <div class="Item_cost cost">
-                                35 310 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item14.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Смарт-часы AMAZFIT Bip U, 1.43", зеленый / зеленый
-                            </div>
-                            <div class="Item_cost cost">
-                                4490 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item15.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Кофемашина PHILIPS EP1224/00, серый/черный
-                            </div>
-                            <div class="Item_cost cost">
-                                29 990 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
-                        <div class="catalog_item item">
-                            <div class="item_image">
-                                <img src="/src/catalog_items/item16.png" alt="item">
-                            </div>
-                            <div class="item_name text">
-                                Гироскутер MIZAR MZ10,5CN, 10.5", карбон
-                            </div>
-                            <div class="Item_cost cost">
-                                12 990 ₽
-                            </div>
-                            <button class="item_btn">
-                                добавить в корзину
-                            </button>
-                        </div>
+                    <div class="catalog_items" id="products-container">
+                        <!-- items -->
                     </div>
                 </section>
             </div>
@@ -263,5 +40,7 @@
             </footer>
         </div>
     </div>
+
+    <script src="./js/renderProducts.js"></script>
 </body>
 </html>
