Part of cart scripts

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     </div>
                     <div class="catalog_items" id="products-container">
                         <!-- items -->
+                        
                     </div>
+                    <div class="hide js-cart"></div>
                 </section>
             </div>
         </main>
@@ -42,5 +44,6 @@
     </div>
 
     <script src="./js/renderProducts.js"></script>
+    <script src="./js/cart.js"></script>
 </body>
 </html>
