--- a/cart.html
+++ b/cart.html
@@ -12,12 +12,13 @@
         <div class="container">
             <header class="header">
                 <div class="header_logo">
-                    <a href="#">
+                    <a href="/index.html">
                         <img class="header_logo-image" src="/src/logo/logo_1.svg" alt="logo">
                     </a>
                 </div>
                 <div class="header_cart text">
                     <a href="/cart.html"><span>Корзина</span></a>
+                    <div class="header_cart-total js-cart-total-count-items">1</div>
                 </div>
             </header>
         </div>
@@ -27,58 +28,11 @@
                 <div class="cart_title">
                     <h1>Корзина</h1>
                 </div>
-                    <div class="cart_items" id="purchase-container">
-                        <div class="cart_item" data-id="1">
-                            <div class="cart_image">
-                                <img src="/src/catalog_items/item1.png" alt="item">
-                            </div>
-                            <div class="cart_name text">
-                                Увлажнитель воздуха STARWIND SHC1322, 3л, белый
-                            </div>
-                            <div class="cart_counter counter_wrapper">
-                                <div class="counter_minus" data-action="minus"><img src="/src/icon/minus.svg" alt="-"></div>
-                                <div class="counter_current" data-counter>1</div>
-                                <div class="counter_plus" data-action="plus"><img src="/src/icon/plus.svg" alt="+"></div>
-                            </div>
-                            <div class="cart_price cost">1650 ₽</div>
-                            <div class="cart_remove-icon"><img src="/src/icon/close.svg" alt="close"></div>
-                            <div class="cart_remove-btn"><img src="/src/icon/remove.png" alt="close"></div>
-                        </div>
-                        <div class="cart_item" data-id="1">
-                            <div class="cart_image">
-                                <img src="/src/catalog_items/item1.png" alt="item">
-                            </div>
-                            <div class="cart_name text">
-                                Увлажнитель воздуха STARWIND SHC1322, 3л, белый
-                            </div>
-                            <div class="cart_counter counter_wrapper">
-                                <div class="counter_minus" data-action="minus"><img src="/src/icon/minus.svg" alt="-"></div>
-                                <div class="counter_current" data-counter>1</div>
-                                <div class="counter_plus" data-action="plus"><img src="/src/icon/plus.svg" alt="+"></div>
-                            </div>
-                            <div class="cart_price cost">1650 ₽</div>
-                            <div class="cart_remove-icon"><img src="/src/icon/close.svg" alt="close"></div>
-                            <div class="cart_remove-btn"><img src="/src/icon/remove.png" alt="close"></div>
-                        </div>
-                        <div class="cart_item" data-id="1">
-                            <div class="cart_image">
-                                <img src="/src/catalog_items/item1.png" alt="item">
-                            </div>
-                            <div class="cart_name text">
-                                Увлажнитель воздуха STARWIND SHC1322, 3л, белый
-                            </div>
-                            <div class="cart_counter counter_wrapper">
-                                <div class="counter_minus" data-action="minus"><img src="/src/icon/minus.svg" alt="-"></div>
-                                <div class="counter_current" data-counter>1</div>
-                                <div class="counter_plus" data-action="plus"><img src="/src/icon/plus.svg" alt="+"></div>
-                            </div>
-                            <div class="cart_price cost">1650 ₽</div>
-                            <div class="cart_remove-icon"><img src="/src/icon/close.svg" alt="close"></div>
-                            <div class="cart_remove-btn"><img src="/src/icon/remove.png" alt="close"></div>
-                        </div>
+                    <div class="cart_items js-cart">
+                        <!-- Cart -->
                     </div>
                     <div class="cart_summ">
-                        <h1>Сумма 6330 ₽</h1>
+                        <h1>Сумма <span class="js-cart-total-price">6330</span> ₽</h1>
                     </div>
                 </div>
             </section>
@@ -108,5 +62,6 @@
             </footer>
         </div>
     </div>
+    <script src="./js/cart.js"></script>
 </body>
 </html>
