--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Test-work/css/style.css">
     <title>Test work</title>
 </head>
 <body>
@@ -12,12 +12,12 @@
         <div class="container">
             <header class="header">
                 <div class="header_logo">
-                    <a href="/index.html">
-                        <img class="header_logo-image" src="/src/logo/logo_1.svg" alt="logo">
+                    <a href="/Test-work/index.html">
+                        <img class="header_logo-image" src="/Test-work/src/logo/logo_1.svg" alt="logo">
                     </a>
                 </div>
                 <div class="header_cart text">
-                    <a href="/cart.html"><span>Корзина</span></a>
+                    <a href="/Test-work/cart.html"><span>Корзина</span></a>
                     <div class="header_cart-total js-cart-total-count-items">1</div>
                 </div>
             </header>
@@ -62,6 +62,6 @@
             </footer>
         </div>
     </div>
-    <script src="./js/cart.js"></script>
+    <script src="/Test-work/js/cart.js"></script>
 </body>
 </html>
