--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Test-work/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=04">
     <title>Test work</title>
 </head>
@@ -14,11 +14,11 @@
             <header class="header">
                 <div class="header_logo">
                     <a href="#">
-                        <img class="header_logo-image" src="/Test-work/src/logo/logo_1.svg" alt="logo">
+                        <img class="header_logo-image" src="./src/logo/logo_1.svg" alt="logo">
                     </a>
                 </div>
                 <div class="header_cart text">
-                    <a href="/Test-work/cart.html"><span>Корзина</span></a>
+                    <a href="./cart.html"><span>Корзина</span></a>
                 </div>
             </header>
         </div>
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <script src="/Test-work/js/renderProducts.js"></script>
-    <script src="/Test-work/js/cart.js"></script>
+    <script src="./js/renderProducts.js"></script>
+    <script src="./js/cart.js"></script>
 </body>
 </html>
